# manul-radar

./: .env.example  .gitignore  CHANGELOG.md  README.md  UPDATES.md  main.py  pyproject.toml  requirements.txt  run_monitor.py
.github/workflows/: job-monitor.yml  smoke-test.yml
app/config/: companies.yaml  config.yaml  config_loader.py  env_loader.py  scorer_factory.py
app/database/: job_repository.py
app/filters/: job_scorer.py  job_text.py
app/models/: job.py  scored_job.py
app/notifier/: telegram_notifier.py
app/services/: job_monitor_service.py
app/sources/: ats_helpers.py  base_source.py  dummy_source.py  greenhouse_source.py  hirex_source.py  hrpeak_source.py  kafein_hrpeak_source.py  kariyer_net_playwright_source.py  kariyer_net_source.py  lever_source.py  linkedin_source.py  peoplise_source.py  pythonjobs_source.py  registry.py  remotive_source.py  smartrecruiters_source.py  successfactors_source.py  (+3 more)
data/: debug_kariyer_net.html
docs/: ARCHITECTURE.md  PLAN_next_sources.md  ROADMAP.md  SOURCES.md
scripts/: check_jobs_db.py  check_sources_construct.py  clean_jobs_db.py  probe_kariyer_net.py  probe_new_sources.py  probe_param_zoho.py  probe_peoplise_hirex.py  simulate_v2_real_jobs.py
tests/: smoke_ats_sources.py  smoke_env_loader.py  smoke_hrpeak_source.py  smoke_job_scorer_policy.py  smoke_kafein_source.py  smoke_kariyer_net_source.py  smoke_repository.py  smoke_run_monitor.py  smoke_run_monitor_guards.py  smoke_scoring_v2.py  smoke_source_name_contract.py  smoke_successfactors_source.py  smoke_telegram_notifier.py  smoke_workflow.py
(+1 files in other folders)
