[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "manul-radar"
version = "1.0.0"
description = "Manul Sentinel — lightweight personal job monitoring assistant"
requires-python = ">=3.10"
dependencies = [
    "loguru==0.7.3",
    "PyYAML==6.0.3",
    "beautifulsoup4==4.15.0",
    "requests==2.34.2",
    "python-dotenv>=1.0.1,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["smoke_*.py", "test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*", "main"]
addopts = "-v --tb=short"
